--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   background-color: rgb(255, 255, 255);
   color: rgb(26, 26, 26);
 }
 
 #main-header {
-  background-color: rgb(231, 92, 72);
-  color: rgb(255, 249, 242);
-  padding: 1rem 5%;
+  background-color: rgb(189, 90, 51);
+  color: rgb(246, 242, 214);
+  padding: 1.5rem 5%;
   text-align: center;
 }
 
@@ -21,9 +21,8 @@ main {
   font: inherit;
   padding: 0.5rem;
   width: 5rem;
-  color: white;
-  background-color: rgb(47, 76, 75);
-  border: 1px solid ;
+  background-color: coral;
+  border: 1px solid rgb(248, 211, 0);
   border-radius: 3px;
   cursor: pointer;
 }
@@ -37,19 +36,13 @@ main {
   margin-top: 1rem;
   font: inherit;
   padding: 0.5rem;
-  width: 10rem;
-  background-color: rgb(255, 197, 96);
+  width: 9rem;
+  background-color: rgb(253, 220, 38);
   border: 1px solid rgb(143, 143, 143);
   border-radius: 3px;
   cursor: pointer;
 }
 
 #game-winner {
-  color: rgb(97, 187, 182);
-}
-
-#startAgainP {
-  margin-top: 2rem;
-  color: rgb(47, 76, 75);
-  font-size: 17px;
+  color: chocolate;
 }
